# poetry-plugin-dynamic-override-sources

./: README.md  pyproject.toml
src/poetry_plugin_dynamic_override_sources/: plugins.py
tests/: conftest.py  test_plugins.py
tests/fixtures/simple_project/: pyproject.toml
